Added ability to join by link and added to share screen, final fixes before Pearson call

--- a/gateway/assets/translations/en/translation.json
+++ b/gateway/assets/translations/en/translation.json
@@ -27,7 +27,8 @@
     "footer": "Create another queue at"
   },
   "shareScreen": {
-    "message": "Scan the QR code or enter the ID"
+    "message": "Scan the QR code or enter the ID",
+    "copy": "Copy"
   },
   "summonScreen": {
     "message": "You're up!",
@@ -258,7 +259,7 @@
   "generalErrorAlert": {
     "title": "Oops! Something went wrong"
   },
-  "confirmDeleteAlert": {
+  "confirmActionAlert": {
     "header": "Are you sure you want to do this?"
   },
   "changeQueuePasswordModal": {
